@@ -1,3 +1,7 @@
+Mar 25, 2024
+  added sanitation of gene symbols for all species
+    (characters with ASCII code > 127 are removed from gene symbols)
+
 Feb 13, 2024
   renamed 'master' to 'main'
 
